--- a/src/application/Splash.fxml
+++ b/src/application/Splash.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="686.0" prefWidth="1150.0" styleClass="verdeClaro" stylesheets="@application.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Controlador">
+<AnchorPane fx:id="root" prefHeight="686.0" prefWidth="1150.0" styleClass="verdeClaro" stylesheets="@application.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Controlador">
    <children>
-      <AnchorPane fx:id="ancla" layoutX="412.0" layoutY="112.0" styleClass="verde" stylesheets="@application.css">
+      <AnchorPane fx:id="cuadroCentro" layoutX="412.0" layoutY="112.0" styleClass="verde" stylesheets="@application.css">
          <children>
             <VBox alignment="TOP_CENTER" layoutX="75.0" layoutY="71.0" prefHeight="385.0" prefWidth="234.0" spacing="10.0" AnchorPane.bottomAnchor="17.0" AnchorPane.leftAnchor="75.0" AnchorPane.rightAnchor="76.0" AnchorPane.topAnchor="71.0">
                <children>
@@ -24,10 +24,14 @@
                   </ImageView>
                   <Label fx:id="lblNombre" alignment="CENTER" prefHeight="21.0" prefWidth="234.0" text="Frogget">
                      <font>
-                        <Font name="Quicksand Regular" size="45.0" />
+                        <Font name="Quicksand Regular" size="50.0" />
                      </font>
                   </Label>
-                  <Label fx:id="lblSlogan" alignment="CENTER" prefHeight="21.0" prefWidth="235.0" text="Scan the Life" />
+                  <Label fx:id="lblSlogan" alignment="CENTER" prefHeight="21.0" prefWidth="235.0" text="Scan the Life">
+                     <font>
+                        <Font name="Quicksand Light" size="24.0" />
+                     </font>
+                  </Label>
                </children>
             </VBox>
          </children>
