menu lateral terminado

--- a/src/application/Login.fxml
+++ b/src/application/Login.fxml
@@ -29,9 +29,9 @@
                         <Insets bottom="10.0" />
                      </VBox.margin>
                   </ImageView>
-                  <JFXTextField labelFloat="true" promptText="Username" styleClass="campos" stylesheets="@application.css" />
-                  <JFXPasswordField labelFloat="true" prefHeight="31.0" prefWidth="269.0" promptText="Password" styleClass="campos" stylesheets="@application.css" />
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="36.0" prefWidth="213.0" styleClass="botones" stylesheets="@application.css" text="Get Started">
+                  <JFXTextField fx:id="txtNombre" labelFloat="true" promptText="Username" styleClass="campos" stylesheets="@application.css" />
+                  <JFXPasswordField fx:id="txtPwd" labelFloat="true" promptText="Password" styleClass="campos" stylesheets="@application.css" />
+                  <Button fx:id="btnLogin" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#logIn" prefHeight="36.0" prefWidth="213.0" styleClass="botones" stylesheets="@application.css" text="Get Started">
                      <font>
                         <Font name="Quicksand Regular" size="14.0" />
                      </font>
