--- a/src/application/HomePage.fxml
+++ b/src/application/HomePage.fxml
@@ -6,10 +6,12 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane prefHeight="686.0" prefWidth="1150.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="application.ControladorHomePage">
+<AnchorPane prefHeight="686.0" prefWidth="1150.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ControladorHomePage">
    <children>
       <BorderPane stylesheets="@application.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
@@ -29,18 +31,53 @@
                   <AnchorPane fx:id="aPan2" styleClass="animal2" stylesheets="@application.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                   <AnchorPane fx:id="aPan3" styleClass="animal3" stylesheets="@application.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                   <AnchorPane fx:id="aPan4" styleClass="animal4" stylesheets="@application.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                  <AnchorPane fx:id="opacityPane" opacity="0.3" style="-fx-background-color: black;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                  <AnchorPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <children>
+                        <BorderPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <center>
+                              <AnchorPane BorderPane.alignment="BOTTOM_CENTER">
+                                 <children>
+                                    <GridPane fx:id="btnGrid" alignment="CENTER" layoutX="267.0" layoutY="178.0" opacity="0.8" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="267.0" AnchorPane.rightAnchor="221.0" AnchorPane.topAnchor="178.0">
+                                      <columnConstraints>
+                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                      </columnConstraints>
+                                      <rowConstraints>
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                      </rowConstraints>
+                                       <children>
+                                          <JFXButton focusTraversable="false" prefHeight="125.0" prefWidth="154.0" styleClass="seccion1" text="Sección 1" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                                          <JFXButton focusTraversable="false" prefHeight="125.0" prefWidth="154.0" styleClass="seccion2" text="Sección 2" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                                          <JFXButton focusTraversable="false" prefHeight="125.0" prefWidth="154.0" styleClass="seccion3" text="Sección 3" GridPane.columnIndex="2" GridPane.rowIndex="0" />
+                                          <JFXButton focusTraversable="false" prefHeight="125.0" prefWidth="154.0" styleClass="seccion4" text="Sección 4" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                                          <JFXButton focusTraversable="false" prefHeight="125.0" prefWidth="154.0" styleClass="seccion5" text="Sección 5" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                          <JFXButton focusTraversable="false" prefHeight="125.0" prefWidth="154.0" styleClass="seccion6" text="Sección 6" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                                          <JFXButton focusTraversable="false" prefHeight="125.0" prefWidth="154.0" styleClass="seccion7" text="Sección 7" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                                          <JFXButton focusTraversable="false" prefHeight="125.0" prefWidth="154.0" styleClass="seccion8" text="Sección 8" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                          <JFXButton focusTraversable="false" prefHeight="125.0" prefWidth="154.0" styleClass="seccion9" text="Sección 9" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                                       </children>
+                                    </GridPane>
+                                 </children>
+                              </AnchorPane>
+                           </center>
+                        </BorderPane>
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane fx:id="opacityPane" style="-fx-background-color: black;" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                   <VBox fx:id="menLateral" prefWidth="200.0" spacing="50.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <padding>
                         <Insets left="20.0" top="10.0" />
                      </padding>
                      <children>
-                        <JFXButton text="Botón 1" />
-                        <JFXButton text="Botón 2" />
-                        <JFXButton text="Botón 3" />
-                        <JFXButton text="Botón 4" />
-                        <JFXButton text="Botón 5" />
-                        <JFXButton text="Botón 6" />
+                        <JFXButton focusTraversable="false" text="Botón 1" />
+                        <JFXButton focusTraversable="false" text="Botón 2" />
+                        <JFXButton focusTraversable="false" text="Botón 3" />
+                        <JFXButton focusTraversable="false" text="Botón 4" />
+                        <JFXButton focusTraversable="false" text="Botón 5" />
+                        <JFXButton focusTraversable="false" text="Botón 6" />
                      </children>
                   </VBox>
                </children>
