--- a/src/application/HomePage.fxml
+++ b/src/application/HomePage.fxml
@@ -17,7 +17,7 @@
          <top>
             <AnchorPane prefHeight="80.0" styleClass="fondoMenu" stylesheets="@application.css" BorderPane.alignment="CENTER">
                <children>
-                  <ImageView fx:id="img" fitHeight="30.0" fitWidth="50.0" layoutX="30.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="25.0">
+                  <ImageView fx:id="img" fitHeight="30.0" fitWidth="50.0" layoutX="30.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true" styleClass="menu" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="25.0">
                      <image>
                         <Image url="@../img/menu-button.png" />
                      </image>
