--- a/src/application/HomePage.fxml
+++ b/src/application/HomePage.fxml
@@ -37,7 +37,7 @@
                            <center>
                               <AnchorPane BorderPane.alignment="BOTTOM_CENTER">
                                  <children>
-                                    <GridPane fx:id="btnGrid" alignment="CENTER" layoutX="267.0" layoutY="178.0" opacity="0.8" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="267.0" AnchorPane.rightAnchor="221.0" AnchorPane.topAnchor="178.0">
+                                    <GridPane fx:id="btnGrid" alignment="CENTER" layoutX="267.0" layoutY="171.0" opacity="0.8" prefHeight="385.0" prefWidth="474.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="267.0" AnchorPane.rightAnchor="209.0" AnchorPane.topAnchor="171.0">
                                       <columnConstraints>
                                           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
