--- a/src/application/application.css
+++ b/src/application/application.css
@@ -13,7 +13,7 @@
 .campos{
 	-fx-text-fill: blue;
 }
-.botones{
+.btnLogin{
 	-fx-background-color: white;
 	-fx-text-fill: green;
 	-fx-border-color: green;
@@ -21,7 +21,7 @@
 	-fx-border-radius: 50.0;
 	-fx-background-radius: 50.0;
 }
-.botones:hover{
+.btnLogin:hover{
 	-fx-background-color: green;
 	-fx-border-color: green;
 	-fx-background-radius: 50.0;
